@@ -54,10 +54,9 @@ public final class ProcessSignalIO {
         String fileName = name + "_pid" + ProcessHelper.getCurrentProcessId() + ".tmp";
         Path filePath = BASE_DIR.resolve(fileName);
         try {
-            Files.writeString(
+            Files.write(
                     filePath,
-                    data,
-                    StandardCharsets.UTF_8,
+                    data.getBytes(StandardCharsets.UTF_8),
                     StandardOpenOption.CREATE,
                     StandardOpenOption.TRUNCATE_EXISTING,
                     StandardOpenOption.WRITE);
@@ -80,7 +79,8 @@ public final class ProcessSignalIO {
             return Optional.empty();
         }
         try {
-            String content = Files.readString(filePath, StandardCharsets.UTF_8);
+            byte[] bytes = Files.readAllBytes(filePath);
+            String content = new String(bytes, StandardCharsets.UTF_8);
             return Optional.of(content);
         } catch (IOException e) {
             JarInJarHelper.LOGGER.error("Error while reading data from {}", fileName, e);
@@ -110,10 +110,9 @@ public final class ProcessSignalIO {
         String fileName = name + ".info";
         Path filePath = BASE_DIR.resolve(fileName);
         try {
-            Files.writeString(
+            Files.write(
                     filePath,
-                    data,
-                    StandardCharsets.UTF_8,
+                    data.getBytes(StandardCharsets.UTF_8),
                     StandardOpenOption.CREATE,
                     StandardOpenOption.TRUNCATE_EXISTING,
                     StandardOpenOption.WRITE);
@@ -136,7 +135,8 @@ public final class ProcessSignalIO {
             return Optional.empty();
         }
         try {
-            String content = Files.readString(filePath, StandardCharsets.UTF_8);
+            byte[] bytes = Files.readAllBytes(filePath);
+            String content = new String(bytes, StandardCharsets.UTF_8);
             return Optional.of(content);
         } catch (IOException e) {
             JarInJarHelper.LOGGER.error("Error while reading info from {}", fileName, e);
